# Boose_PA6

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  builder.sh  cmake_install.cmake  linecount.sh
src/: ai.c  ai.h  battleship.c  battleship.h  board-spot-checking.c  board-spot-checking.h  board.c  board.h  coord.c  coord.h  log.c  log.h  main.c  rand.c  rand.h
src/ctty/: CMakeLists.txt  keypress-codes.h
src/ctty/ansi/: CMakeLists.txt  colors.c  colors.h  cursor.c  cursor.h
src/ctty/keypress/: keypress.h  keyselect.h
src/ctty/menu/: menu.c  menu.h
src/ctty/screen/: screen.h  view-file.c  view-file.h
src/ui/: CMakeLists.txt  board.c  board.h  escape-codes.h  menu.c  menu.h  place-ships.c  place-ships.h  print-board.h  select-shot-spot.c  select-shot-spot.h  space-print-info.h  terminal.c  terminal.h
